--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>小新的個人網站介紹</title>
+	<title>阿布的個人網站介紹</title>
 	<style>
 		body{
-			background-color: #013220;
+			background-color: #46A3FF;
 			color: width;
 			font-fanily Arial, sans-serif;
 			text-align: center;
@@ -29,13 +29,10 @@
 			font-size: 18px;
 		}
 		.links a.facebook {
-			color: #1877F2; /* facebook 藍色 */
+			color: #3b5998; /* facebook 藍色 */
 		}
-		.links a.google {
-			color: #DB4437; /* Google 紅色 */
-		}
-		.links a.yahoo {
-			color: #6001D2; /* Yahoo 紫色 */
+		.links a.instagram {
+			color: #DD2A7B; /* instagram 紅色 */
 		}
 		.links a:hover {
 			text-decoration: underline;
@@ -44,14 +41,16 @@
 </head>
 <body>
 	<div class="profile">
-		<img src="小新.png" alt="小新的大頭照" width="400" height="400">
-		<h1>我叫：小新</h1>
-		<p>喜歡大美女，養一隻寵物名叫小白</p>
+		<img src="阿布.jpg" alt="阿布的照片" width="400" height="400">
+		<h1>我叫：阿布</h1>
+		<p>我看過麥克華斯基</p>
 		<div class="links">
-			<a href="https://www.facebook.com" target="_blank" class="facebook">Facebook</a>
-			<a href="https://www.google.com" target="_blank" class="google">Google</a>
-			<a href="https://www.yahoo.com" target="_blank" class="yahoo">Yahoo</a>
-		</div>
-	</div>
-</body>
+				<a href="https://www.facebook.com/profile.php?id=100054976315132" target="_blank" class="facebook">Facebook</a>
+				<a href="https://www.instagram.com/cherish0.7/" target="_blank" class="instagram">instagram</a>
+			</div>
+			<footer>
+				<p>阿布再也不會怕被嚇了</p>
+			</div>
+		</footer>
+	</body>
 </html>
